--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -3,61 +3,36 @@ name: Upload Python Package
 on:
   push:
     tags:
-      - 'v*'  # Trigger on version tags like v1.0.0, v2.1.3, etc.
+      - 'v*'
 
 permissions:
   contents: read
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          submodules: 'recursive'
-          
-      - uses: actions/setup-python@v5
-        with:
-          python-version: '3.8'
-          
-      - name: Install build dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install build-essential git git-lfs python3-setuptools python3-venv graphviz cmake
-          git lfs install
-          git lfs pull
-          python -m pip install --upgrade pip setuptools build
-          
-      - name: Install project dependencies
-        run: |
-          python -m pip install -r requirements.txt
-          
-      - name: Build package
-        run: |
-          python -m build
-          
-      - name: Upload build artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: python-package-distributions
-          path: dist/
-
-  publish-to-pypi:
-    name: Publish Python 🐍 distribution 📦 to PyPI
-    needs: build
+  build-and-publish:
     runs-on: ubuntu-latest
     environment:
       name: pypi
       url: https://pypi.org/p/llnl-ssapy
     permissions:
-      id-token: write  # IMPORTANT: mandatory for trusted publishing
+      id-token: write
       
     steps:
-      - name: Download all the dists
-        uses: actions/download-artifact@v4
+      - uses: actions/checkout@v4
         with:
-          name: python-package-distributions
-          path: dist/
+          submodules: 'recursive'
           
-      - name: Publish distribution 📦 to PyPI
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install build-essential git git-lfs cmake
+          git lfs install
+          git lfs pull
+          python -m pip install --upgrade pip build
+          python -m pip install -r requirements.txt
+          
+      - name: Build source distribution
+        run: python -m build --sdist
+        
+      - name: Publish to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
